[package]
name = "blade"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["env", "derive"] }
directories = "6"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9.10"

[profile.release]
codegen-units = 1
lto = true
